--- a/cloudformation/alb.yml
+++ b/cloudformation/alb.yml
@@ -1,7 +1,7 @@
 ---
 AWSTemplateFormatVersion: "2010-09-09"
 Description: |
-  Example snippet setting up and ALB
+  Example snippet setting up an ALB
   and adding redirect rules using a Lambda-backed Custom Resource
 
 Parameters:
